--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: "Exo", sans-serif;
+    background-color:aliceblue;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #a6d5fb;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #012645;
+  }
